fix(web): set color-scheme to dark
allows for dark scrollbar and dark form elements by default

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -11,6 +11,7 @@
     --gray: #b9aeac;
     --accent: #48ff9e;
     --destructive: #ff5947;
+    color-scheme: dark;
 }
 
 body {
